--- a/package.json
+++ b/package.json
@@ -8,10 +8,22 @@
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "echo 'Git hook lint(代码格式检查)!' && npm run lint --fix",
+      "pre-push": "npm run test"
+    }
+  },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@mdi/font": "^3.6.95",
+    "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "lodash": "^4.17.15",
+    "roboto-fontface": "*",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -22,10 +34,14 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
+    "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "gitHooks": {
