--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
+    "vue-fragment": "^1.5.1",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
