--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "lodash-webpack-plugin": "^0.11.5",
+    "mockjs-async": "^0.0.5",
     "sass": "^1.23.6",
     "sass-loader": "^8.0.0",
     "style-resources-loader": "^1.2.1",
