--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "core-js": "^3.3.2",
     "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-fragment": "^1.5.1",
+    "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.1.3",
+    "vue-snotify": "^3.2.1",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
   },
@@ -35,7 +38,11 @@
     "@vue/cli-service": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "husky": "^3.0.9",
