--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-router": "^3.1.3",
     "vue-snotify": "^3.2.1",
     "vuetify": "^2.1.0",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
