--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "Management-fe-RS",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
     "build:dev": "vue-cli-service build --mode development",
     "build:pro": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
+    "lint:style": "stylelint **/*.{html,vue} --custom-syntax postcss-html",
+    "lint:css": "stylelint **/*.{css,sass,scss} --syntax scss",
     "test:unit": "vue-cli-service test:unit"
   },
   "husky": {
@@ -57,6 +59,11 @@
     "sass": "^1.23.6",
     "sass-loader": "^8.0.0",
     "style-resources-loader": "^1.2.1",
+    "stylelint": "^12.0.0",
+    "stylelint-codeframe-formatter": "^1.0.4",
+    "stylelint-order": "^3.1.1",
+    "stylelint-scss": "^3.13.0",
+    "stylelint-webpack-plugin": "^1.1.0",
     "terser-webpack-plugin": "^2.2.1",
     "vue-cli-plugin-vuetify": "^2.0.2",
     "vue-template-compiler": "^2.6.10"
