--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-router": "^3.1.3",
     "vue-snotify": "^3.2.1",
     "vuetify": "^2.1.0",
+    "vuetify-dialog": "^2.0.0-rc.0",
     "vuex": "^3.0.1",
     "vuex-persist": "^2.2.0"
   },
