chore: 去除冗余依赖

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
-    "build:dev": "vue-cli-service build --mode development",
-    "build:pro": "vue-cli-service build --mode production",
+    "build": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
     "lint:style": "stylelint **/*.{html,vue} --custom-syntax postcss-html",
     "lint:css": "stylelint **/*.{css,sass,scss} --syntax scss",
@@ -26,9 +25,7 @@
     "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
-    "secure-ls": "^1.2.5",
     "vue": "^2.6.10",
-    "vue-fragment": "^1.5.1",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.1.3",
     "vue-snotify": "^3.2.1",
