--- a/package.json
+++ b/package.json
@@ -18,31 +18,31 @@
     }
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "await-timeout": "^0.6.0",
+    "@babel/polyfill": "^7.12.1",
+    "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
-    "core-js": "^3.3.2",
-    "lodash": "^4.17.15",
+    "core-js": "^3.15.2",
+    "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
-    "vue-router": "^3.1.3",
+    "vue-router": "^3.5.2",
     "vue-snotify": "^3.2.1",
-    "vuetify": "^2.1.0",
-    "vuetify-dialog": "^2.0.0-rc.0",
-    "vuex": "^3.0.1",
+    "vuetify": "^2.5.5",
+    "vuetify-dialog": "^2.0.16",
+    "vuex": "^3.6.2",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.2.0",
     "@commitlint/config-conventional": "^8.2.0",
-    "@vue/cli-plugin-babel": "^4.0.0",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-plugin-unit-jest": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-plugin-unit-jest": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
+    "babel-eslint": "^10.1.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -52,20 +52,20 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
     "husky": "^3.0.9",
-    "lint-staged": "^9.4.2",
+    "lint-staged": "^9.5.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mockjs-async": "^0.0.5",
-    "sass": "^1.23.6",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.35.1",
+    "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.2.1",
     "stylelint": "^12.0.0",
     "stylelint-codeframe-formatter": "^1.0.4",
     "stylelint-order": "^3.1.1",
-    "stylelint-scss": "^3.13.0",
+    "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^1.1.0",
     "terser-webpack-plugin": "^2.2.1",
-    "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-vuetify": "^2.4.1",
+    "vue-template-compiler": "^2.6.14"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
