--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.15.2",
+    "dayjs": "^1.10.5",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
-    "moment": "^2.24.0",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.5.2",
