--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.10.5",
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^5.0.1",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.5.2",
