--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     }
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.12",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
     "core-js": "^3.15.2",
@@ -24,6 +25,7 @@
     "lodash": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.0",
     "nprogress": "^0.2.0",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.5.2",
