--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.4",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-plugin-unit-jest": "^4.5.13",
