--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Management-fe-RS",
+  "name": "@tanghongxin/VuetifyBoilerplate",
   "version": "0.0.1",
   "private": true,
   "scripts": {
