--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VUE_APP_TENCENT_MAP_PROTOCOL='https'
 VUE_APP_TENCENT_MAP_HOST_AND_PATH='map.qq.com/api/js'
 
 VUE_APP_TITLE='VuetifyBoilerplate'
+VUE_APP_GITHUB_REPO='https://github.com/tanghongxin/VuetifyBoilerplate.git'
