--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vue/cli-plugin-unit-jest": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "@vue/test-utils": "1.0.0-beta.29",
+    "axios-mock-adapter": "^1.19.0",
     "babel-eslint": "^7.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-lodash": "^3.3.4",
@@ -64,7 +65,6 @@
     "lint-staged": "^9.5.0",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.5",
-    "mockjs-async": "^0.0.5",
     "sass": "^1.35.1",
     "sass-loader": "^10.2.0",
     "style-resources-loader": "^1.2.1",
