🔧 add VUE_APP_ENABLE_CDN config

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VUE_APP_TENCENT_MAP_HOST_AND_PATH='map.qq.com/api/js'
 
 VUE_APP_TITLE='VuetifyBoilerplate'
 VUE_APP_GITHUB_REPO='https://github.com/tanghongxin/VuetifyBoilerplate.git'
+VUE_APP_ENABLE_CDN='true'
