--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     }
   },
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-rc.12",
+    "@vue/composition-api": "^1.1.1",
     "axios": "^0.21.1",
-    "core-js": "^3.15.2",
+    "core-js": "^3.16.1",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.5.2",
-    "vuetify": "^2.5.5",
+    "vuetify": "^2.5.8",
     "vuex": "^3.6.2",
     "vuex-persist": "^2.2.0"
   },
@@ -50,7 +50,7 @@
     "@vue/cli-plugin-unit-jest": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
     "@vue/test-utils": "1.0.0-beta.29",
-    "axios-mock-adapter": "^1.19.0",
+    "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^7.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-lodash": "^3.3.4",
@@ -70,7 +70,7 @@
     "stylelint": "^13.13.1",
     "stylelint-codeframe-formatter": "^1.0.4",
     "stylelint-config-sass-guidelines": "^8.0.0",
-    "stylelint-scss": "^3.19.0",
+    "stylelint-scss": "^3.20.1",
     "stylelint-webpack-plugin": "^1.1.0",
     "terser-webpack-plugin": "^2.2.1",
     "vue-template-compiler": "^2.6.14"
