--- a/package.json
+++ b/package.json
@@ -31,25 +31,25 @@
   },
   "dependencies": {
     "@vue/composition-api": "^1.1.1",
-    "axios": "^0.21.1",
-    "core-js": "^3.16.1",
+    "axios": "^0.23.0",
+    "core-js": "^3.19.0",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.5.2",
-    "vuetify": "^2.5.8",
+    "vuetify": "^2.5.10",
     "vuex": "^3.6.2",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.4",
+    "@types/lodash-es": "^4.17.5",
     "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-plugin-unit-jest": "^4.5.13",
     "@vue/cli-service": "^4.5.13",
-    "@vue/test-utils": "1.0.0-beta.29",
+    "@vue/test-utils": "1.2.2",
     "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^7.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -63,12 +63,12 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.5.0",
     "live-server": "^1.2.1",
-    "lodash-webpack-plugin": "^0.11.5",
+    "lodash-webpack-plugin": "^0.11.6",
     "sass": "^1.35.1",
     "sass-loader": "^10.2.0",
     "style-resources-loader": "^1.2.1",
     "stylelint": "^13.13.1",
-    "stylelint-codeframe-formatter": "^1.0.4",
+    "stylelint-codeframe-formatter": "^1.0.5",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-scss": "^3.20.1",
     "stylelint-webpack-plugin": "^1.1.0",
