--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "TMap",
     "tencent-map"
   ],
+  "engines": {
+    "node": ">=12.18.3"
+  },
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build --mode production",
@@ -30,8 +33,8 @@
     }
   },
   "dependencies": {
-    "@vue/composition-api": "^1.1.1",
-    "axios": "^0.23.0",
+    "@vue/composition-api": "^1.2.4",
+    "axios": "^0.24.0",
     "core-js": "^3.19.0",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.0",
@@ -41,14 +44,14 @@
     "vue-router": "^3.5.2",
     "vuetify": "^2.5.10",
     "vuex": "^3.6.2",
-    "vuex-persist": "^2.2.0"
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
-    "@vue/cli-plugin-babel": "^4.5.13",
-    "@vue/cli-plugin-eslint": "^4.5.13",
-    "@vue/cli-plugin-unit-jest": "^4.5.13",
-    "@vue/cli-service": "^4.5.13",
+    "@vue/cli-plugin-babel": "^4.5.14",
+    "@vue/cli-plugin-eslint": "^4.5.14",
+    "@vue/cli-plugin-unit-jest": "^4.5.14",
+    "@vue/cli-service": "^4.5.14",
     "@vue/test-utils": "1.2.2",
     "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^7.2.3",
@@ -60,13 +63,13 @@
     "compression-webpack-plugin": "^5.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.2.3",
-    "husky": "^3.0.9",
-    "lint-staged": "^9.5.0",
+    "husky": "^4.0.0",
+    "lint-staged": "^11.2.5",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.6",
     "sass": "^1.35.1",
     "sass-loader": "^10.2.0",
-    "style-resources-loader": "^1.2.1",
+    "style-resources-loader": "^1.4.1",
     "stylelint": "^13.13.1",
     "stylelint-codeframe-formatter": "^1.0.5",
     "stylelint-config-sass-guidelines": "^8.0.0",
