--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
   "dependencies": {
     "@vue/composition-api": "^1.2.4",
     "axios": "^0.24.0",
-    "core-js": "^3.19.0",
+    "core-js": "^3.19.1",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
-    "vue-router": "^3.5.2",
-    "vuetify": "^2.5.10",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.6.0",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
@@ -52,7 +52,7 @@
     "@vue/cli-plugin-eslint": "^4.5.14",
     "@vue/cli-plugin-unit-jest": "^4.5.14",
     "@vue/cli-service": "^4.5.14",
-    "@vue/test-utils": "1.2.2",
+    "@vue/test-utils": "^1.3.0",
     "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^7.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -61,13 +61,13 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "compression-webpack-plugin": "^6.1.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.2.3",
+    "eslint": "^7.32.0",
+    "eslint-plugin-vue": "^7.20.0",
     "husky": "^4.0.0",
     "lint-staged": "^11.2.5",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.6",
-    "sass": "^1.35.1",
+    "sass": "^1.43.4",
     "sass-loader": "^10.2.0",
     "style-resources-loader": "^1.4.1",
     "stylelint": "^13.13.1",
