--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint --fix",
-      "pre-push": "npm run test"
+      "pre-commit": "npm run lint --fix"
     }
   },
   "dependencies": {
