--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint --fix"
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run test:unit"
     }
   },
   "dependencies": {
