--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tencent-map"
   ],
   "engines": {
-    "node": ">=14.18.1"
+    "node": ">=14.19.0"
   },
   "scripts": {
     "serve": "vue-cli-service serve --mode development",
@@ -24,13 +24,8 @@
     "lint": "vue-cli-service lint",
     "lint:style": "stylelint **/*.{html,vue} --custom-syntax postcss-html",
     "lint:css": "stylelint **/*.{css,sass,scss} --syntax scss",
-    "test:unit": "vue-cli-service test:unit"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run test:unit"
-    }
+    "test:unit": "vue-cli-service test:unit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@vue/composition-api": "^1.4.0",
@@ -39,6 +34,7 @@
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.1",
     "nprogress": "^0.2.0",
+    "qs": "^6.11.0",
     "vue": "^2.6.14",
     "vue-img-inputer": "^2.1.6",
     "vue-router": "^3.5.3",
@@ -63,7 +59,7 @@
     "compression-webpack-plugin": "^6.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.20.0",
-    "husky": "^4.0.0",
+    "husky": "^8.0.0",
     "lint-staged": "^12.1.2",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.6",
