--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "core-js": "^3.26.1",
+    "events": "^3.3.0",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.1.1",
     "nprogress": "^0.2.0",
@@ -43,11 +44,12 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
-    "@vue/cli-plugin-babel": "^4.5.15",
-    "@vue/cli-plugin-eslint": "^4.5.15",
-    "@vue/cli-plugin-unit-jest": "^4.5.15",
-    "@vue/cli-service": "^4.5.15",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "^1.3.0",
+    "@vue/vue2-jest": "^29.2.1",
     "axios-mock-adapter": "^1.20.0",
     "babel-eslint": "^7.2.3",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -55,10 +57,12 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
-    "compression-webpack-plugin": "^6.1.1",
+    "compression-webpack-plugin": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.20.0",
     "husky": "^8.0.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.6",
     "sass": "^1.43.4",
