--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.19.1",
     "@types/lodash-es": "^4.17.5",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
@@ -50,26 +51,25 @@
     "@vue/cli-service": "^5.0.8",
     "@vue/test-utils": "^1.3.0",
     "@vue/vue2-jest": "^29.2.1",
-    "axios-mock-adapter": "^1.20.0",
-    "babel-eslint": "^7.2.3",
+    "axios-mock-adapter": "^1.21.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "compression-webpack-plugin": "^10.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^7.20.0",
-    "husky": "^8.0.0",
+    "eslint": "^8.29.0",
+    "eslint-plugin-vue": "^9.8.0",
+    "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "live-server": "^1.2.1",
     "lodash-webpack-plugin": "^0.11.6",
-    "sass": "^1.43.4",
-    "sass-loader": "^10.2.0",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "style-resources-loader": "^1.4.1",
     "stylelint": "^13.13.1",
-    "stylelint-codeframe-formatter": "^1.0.5",
+    "stylelint-codeframe-formatter": "^1.1.0",
     "stylelint-config-sass-guidelines": "^8.0.0",
     "stylelint-scss": "^3.20.1",
     "stylelint-webpack-plugin": "^2.3.1",
