--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "compression-webpack-plugin": "^10.0.0",
-    "eslint": "^8.29.0",
+    "eslint": "7.32.0",
     "eslint-plugin-vue": "^9.8.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
