--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.1",
   "private": false,
   "license": "MIT",
-  "description": "An out of box boilerplate based on vuetify with multiple preset enhancement",
+  "description": "An out of box boilerplate based on vuetify3 with multiple preset enhancement",
   "keywords": [
     "vuetify",
     "material-design",
     "MD",
     "vue",
-    "@vue/composition-api",
     "TencentMap",
     "TMap",
     "tencent-map"
@@ -32,14 +31,13 @@
     "core-js": "^3.26.1",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21",
-    "material-design-icons-iconfont": "^6.1.1",
+    "material-design-icons-iconfont": "^6.7.0",
     "nprogress": "^0.2.0",
     "qs": "^6.11.0",
-    "vue": "^2.7.7",
-    "vue-img-inputer": "^2.1.6",
-    "vue-router": "^3.5.3",
-    "vuetify": "^2.5.10",
-    "vuex": "^3.6.2",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.1",
+    "vuex": "^4.1.0",
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
@@ -49,8 +47,8 @@
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "@vue/test-utils": "^1.3.0",
-    "@vue/vue2-jest": "^29.2.1",
+    "@vue/test-utils": "link:^@vue/test-utils",
+    "@vue/vue3-jest": "^29.2.2",
     "axios-mock-adapter": "^1.21.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-lodash": "^3.3.4",
@@ -75,6 +73,6 @@
     "stylelint-scss": "^4.3.0",
     "stylelint-webpack-plugin": "^3.3.0",
     "terser-webpack-plugin": "^4.2.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.7.14"
   }
 }
