🚧 vue-cli 迁移至 vite

--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-VUE_APP_TENCENT_MAP_KEY='OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77'
-VUE_APP_TENCENT_MAP_VERSION='2.exp'
-VUE_APP_TENCENT_MAP_PROTOCOL='https'
-VUE_APP_TENCENT_MAP_HOST_AND_PATH='map.qq.com/api/js'
+VITE_TENCENT_MAP_KEY='OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77'
+VITE_TENCENT_MAP_VERSION='2.exp'
+VITE_TENCENT_MAP_PROTOCOL='https'
+VITE_TENCENT_MAP_HOST_AND_PATH='map.qq.com/api/js'
 
-VUE_APP_TITLE='VuetifyBoilerplate'
-VUE_APP_GITHUB_REPO='https://github.com/tanghongxin/VuetifyBoilerplate.git'
-VUE_APP_ENABLE_CDN='true'
+VITE_GITHUB_REPO='https://github.com/tanghongxin/VuetifyBoilerplate.git'
