--- a/package.json
+++ b/package.json
@@ -17,18 +17,15 @@
     "node": ">=14.19.0"
   },
   "scripts": {
-    "serve": "vue-cli-service serve --mode development",
-    "build": "vue-cli-service build --mode production",
-    "build:report": "vue-cli-service build --report --mode production && cd dist && live-server --open=./report.html",
+    "dev": "vite --host",
+    "build": "vite build",
+    "serve": "vite preview",
     "lint": "vue-cli-service lint",
-    "lint:style": "stylelint **/*.{vue} --custom-syntax postcss-html",
-    "lint:css": "stylelint **/*.{css,sass,scss} --custom-syntax postcss-html",
     "test:unit": "vue-cli-service test:unit",
     "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.2.1",
-    "core-js": "^3.26.1",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
@@ -41,38 +38,20 @@
     "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.22.7",
     "@types/lodash-es": "^4.17.5",
-    "@vue/cli-plugin-babel": "^5.0.8",
-    "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vue/cli-plugin-unit-jest": "^5.0.8",
-    "@vue/cli-service": "^5.0.8",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/test-utils": "link:^@vue/test-utils",
     "@vue/vue3-jest": "^29.2.2",
     "axios-mock-adapter": "^1.21.2",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
-    "compression-webpack-plugin": "^10.0.0",
-    "eslint": "7.32.0",
+    "eslint": "8.44.0",
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "live-server": "^1.2.1",
-    "lodash-webpack-plugin": "^0.11.6",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.56.1",
-    "sass-loader": "^13.2.0",
-    "style-resources-loader": "^1.4.1",
-    "stylelint": "^14.16.0",
-    "stylelint-codeframe-formatter": "^1.1.0",
-    "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-scss": "^4.3.0",
-    "stylelint-webpack-plugin": "^3.3.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "vue-template-compiler": "^2.7.14"
+    "vite": "^4.4.2",
+    "vite-plugin-cdn-import": "^0.3.5",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
