--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/test-utils": "link:^@vue/test-utils",
+    "@vue/test-utils": "^2.4.0",
     "@vue/vue3-jest": "^29.2.2",
     "axios-mock-adapter": "^1.21.2",
     "eslint": "8.44.0",
