--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sass": "^1.56.1",
     "vite": "^4.4.2",
     "vite-plugin-cdn-import": "^0.3.5",
-    "vite-plugin-compression": "^0.5.1"
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-vuetify": "^1.0.2"
   }
 }
