--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "build": "vite build",
     "serve": "vite preview",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "vitest",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -40,19 +41,20 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.5",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vitest/coverage-v8": "^0.33.0",
     "@vue/test-utils": "^2.4.0",
-    "@vue/vue3-jest": "^29.2.2",
     "axios-mock-adapter": "^1.21.2",
     "eslint": "8.44.0",
     "eslint-plugin-vue": "^9.15.1",
     "husky": "^8.0.2",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest-environment-jsdom": "^29.6.1",
+    "jsdom": "^22.1.0",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.56.1",
     "vite": "^4.4.2",
     "vite-plugin-cdn-import": "^0.3.5",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-vuetify": "^1.0.2"
+    "vite-plugin-vuetify": "^1.0.2",
+    "vitest": "^0.33.0"
   }
 }
