--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+VITE_APP_TITLE='VuetifyBoilerplate'
+
 VITE_TENCENT_MAP_KEY='OB4BZ-D4W3U-B7VVO-4PJWW-6TKDJ-WPB77'
 VITE_TENCENT_MAP_VERSION='2.exp'
 VITE_TENCENT_MAP_PROTOCOL='https'
