👷Azure Pipelines 单元测试阶段仅在 PR 执行

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -25,6 +25,7 @@ steps:
 - script: |
     pnpm test
   displayName: 'PNPM test'
+  condition: and(succeeded(), eq(variables['Build.Reason'], 'PullRequest'))
 
 - script: |
     pnpm build
