--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@vueuse/core": "^10.2.1",
     "axios": "^1.2.1",
     "events": "^3.3.0",
     "lodash-es": "^4.17.21",
     "material-design-icons-iconfont": "^6.7.0",
     "nprogress": "^0.2.0",
+    "pinia": "^2.1.4",
     "qs": "^6.11.0",
     "vue": "^3.3.4",
     "vue-router": "^4.1.6",
