--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vue/test-utils": "^2.4.3",
     "axios-mock-adapter": "^1.22.0",
+    "code-inspector-plugin": "^0.8.0",
     "eslint": "8.56.0",
     "eslint-plugin-vitest-globals": "^1.4.0",
     "eslint-plugin-vue": "^9.19.2",
