🐛 修复多标签页 bug

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 VITE_APP_TITLE='vuetify-admin'
 
+VITE_ROUTER_HISTORY='hash'
+
 VITE_AMAP_JS_KEY=39233d05829aa31800cbd1155819c10b
 
 VITE_GITHUB_REPO='https://github.com/tanghongxin/vuetify-admin.git'
