--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "unplugin-auto-import": "^0.17.5",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.2.9",
-    "vite-plugin-cdn-import": "^0.3.5",
+    "vite-plugin-cdn2": "^1.1.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vuetify": "^2.0.3"
