♻️ v-keep-scroll 拆分为独立 NPM 包

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,13 @@
       "@/*": ["src/*"]
     },
     "types": [
-      "vite/client"
+      "vite/client",
+      "v-keep-scroll/types"
     ]
   },
   "include": [
     "src/**/*",
-    "types/index.d.ts",
+    "types/index.d.ts"
   ],
   "exclude": ["node_modules", "dist"]
 }
