--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pinia": "^2.1.7",
     "qs": "^6.12.1",
     "radash": "^12.1.0",
+    "v-keep-scroll": "^0.0.2",
     "vue": "^3.4.23",
     "vue-router": "^4.3.2",
     "vuetify": "^3.5.16"
