--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -50,6 +50,7 @@ steps:
     runOptions: 'inline'
     inline: |
       tar -zxvf /tmp/dist.tar.gz -C /tmp
+      chattr -i $(DEPLOY_DIR)/dist/.user.ini
       rm -rf $(DEPLOY_DIR)/dist /tmp/dist.tar.gz
       mv /tmp/dist $(DEPLOY_DIR)/dist
   displayName: 'Deploy'
