--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext .ts,.vue --ignore-path .gitignore .",
+    "lint": "eslint",
     "lint:fix": "pnpm lint --fix",
     "prepare": "husky"
   },
@@ -39,18 +39,20 @@
     "vuetify": "^3.5.16"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.4",
     "@types/node": "^20.12.7",
     "@types/qs": "^6.9.17",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.4",
     "axios-mock-adapter": "^2.1.0",
     "code-inspector-plugin": "^0.18.3",
-    "eslint": "8.56.0",
+    "eslint": "9.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-vue": "^9.25.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-vue": "^9.32.0",
     "husky": "^9.1.7",
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.75.0",
